--- a/style.css
+++ b/style.css
@@ -2,4 +2,14 @@ body {
     color: white;
     background-image: url("Images/space.jpg");
     background-size: cover;
+    text-align: center;
+    font-family: "Space Mono", monospace;
+}
+
+.btnClick {
+    padding: 5px 10px;
+    background: black;
+    border: none;
+    color: white;
+    font-family: inherit;
 }
