--- a/style.css
+++ b/style.css
@@ -6,10 +6,18 @@ body {
     font-family: "Space Mono", monospace;
 }
 
-.btnClick {
+.btn {
     padding: 5px 10px;
     background: black;
     border: none;
     color: white;
     font-family: inherit;
+}
+
+.underline {
+    border-bottom: 3px solid white;
+}
+
+#logo {
+    width: 100px;
 }
